# DAO-Portal

./: .env.example  .gitignore  DEPLOYMENT.md  DEPLOYMENT_SUMMARY.md  ICON_CLEANUP_COMPLETE.md  PRODUCTION_DEPLOYMENT.md  README.md  TECHNICAL_DOCUMENTATION.txt  docker-compose.blue-green.yml  docker-compose.production.yml  docker-compose.yml  first_stage_steps_notes.md  implementation_guide.md  import-data.sh  package-lock.json  pyproject.toml  test_fixes.html  update_dao_data.sh
.github/workflows/: ci.yml
backend/: Dockerfile  import_dao_data.py  import_data.sh  init_db.py  pyproject.toml  requirements.txt  run_init_script.sh  simple_main.py
backend/app/: main.py
backend/app/api/: schemas.py
backend/app/api/v1/: dao.py  enhanced_metrics.py  metrics.py
backend/app/core/: config.py
backend/app/db/: models.py  session.py  session_sync.py
backend/app/scripts/: import_dao_data.py
backend/app/workers/: celery_app.py  tasks.py
backend/tests/: test_apy.py
nginx/: nginx.conf
scripts/: backup-rollback.sh  deploy-setup.sh  health-check.sh  switch-traffic.sh
web/: Dockerfile  next.config.js  package-lock.json  package.json
web/app/: globals.css  layout.tsx  main.py  page.tsx  providers.tsx
web/app/api-test/: page.tsx
web/app/connectivity-test/: page.tsx
web/app/dao/: page.tsx
web/app/debug/: page.tsx
web/app/icon-test/: page.tsx
web/app/search-test/: page.tsx
web/components/: DAOSelector.tsx  mode-toggle.tsx  navbar.tsx
web/components/ui/: card.tsx  (+7 more)
web/lib/: api-clients.ts  utils.ts
web/public/: dao_data.json
web/utils/: exportUtils.js
(+36 files in other folders)
